<resources>
    <string name="app_name">Chronic Diseases and Health Care System</string>
    <string name="NCD_Patient_Handbook">NCD Patient Handbook</string>
    <string name="AddSNN">  Enter SNN </string>
    <string name="Login"> Login  </string>
    <string name="unrwa"> UNRWA </string>
    <string name="Personal_data">Personal Data</string>
    <string name="Lab_tests">Lab Tests</string>
    <string name="Deadlines">Deadlines</string>
    <string name="The_pharmacy">Pharmacy</string>
    <string name="Health_Tips">Health Tips</string>
    <string name="title_activity_main2_menu">Main2MenuActivity</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="personal_information">Personal Information</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="Appoiment">Appointment</string>
    <string name="ResoneVisit">Reason For Visit :</string>
    <string name="DeadLine">DeadLine :</string>
    <string name="hour">Hour :</string>
    <string name="DateAtt"> Date of attendance to the health centre</string>
    <string name="Labs">LABS</string>
    <string name="NameLab">Name Lab :</string>
    <string name="Date">Date Lab :</string>
    <string name="Rersult">Result :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
