<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="18dp"
    android:clickable="true"
    android:focusable="true"
    android:background="#ffffff"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    app:cardElevation="2dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/ResonVisite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/ResoneVisit"
            android:textColor="@color/black"
            android:textSize="@dimen/titel" />

        <TextView
            android:id="@+id/tvResonVisite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:text=" ResonVisite"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/DeadLine"
            android:textColor="@color/black"
            android:textSize="@dimen/titel" />

        <TextView
            android:id="@+id/tvDeadLine"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="2222222"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/hour"
            android:textColor="@color/black"
            android:textSize="@dimen/titel" />

        <TextView
            android:id="@+id/tvhour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="2222222"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textSize" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>
</android.support.v7.widget.CardView>